2005-06-17  Vicki Murley  <vicki@apple.com>

        Reviewed by Maciej. 

        Test cases added: None, since this test requires manual interaction.

	- fixed <rdar://problem/4086793> Selects wrapped by Span or Label elements 
	do not resize when options are added via javascript
        
	* khtml/rendering/render_form.cpp:
        (RenderSelect::layout): Remove call setting setNeedsLayout to true. setNeedsLayout
	is already true at this point, and this additional call has the negative effect of 
	marking m_normalChildNeedsLayout on the element's parent, which keeps layout from 
	propagating all the way up to the root later on.

2005-06-17  Justin Garcia  <justin.garcia@apple.com>

	Fix for rdar://3756860, (also listed as) http://bugzilla.opendarwin.org/show_bug.cgi?id=3295
	The cellIndex property for HTMLTableCellElement was always zero because the method to support it was just a stub.  KHTML fix was to simply call nodeIndex(), but this is incorrect because a table row can have as children <script>s and <form>s (and perhaps others).
	
        Reviewed by hyatt and john

        Test cases added:
	* layout-tests/fast/table/cellindex.html: Added.  Illustrates the fix.

        * khtml/html/html_tableimpl.cpp:
        (DOM::HTMLTableCellElementImpl::cellIndex): Iterate through siblings only counting <th> and <td> elements
        * khtml/html/html_tableimpl.h:

2005-06-17  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej.

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=3419
        <rdar://problem/4111752> REGRESSION (125-312/412): Safari doesn't display edmunds.com pages first time through

        * khtml/html/htmltokenizer.cpp: (khtml::HTMLTokenizer::parseTag): set 'script' flag when 
          parsing <script src="foo" /> case.  In this case, parseTag calls the scriptHandler function which expects 
          that flag to be set, and sets it back to false at the appropriate time.
