@@ -71,8 +71,3 @@ class KHTMLPartBrowserHostExtension {
 public:
     KHTMLPartBrowserHostExtension(KHTMLPart *) { }
 };
-
-class KHTMLZoomFactorAction {
-public:
-    void setEnabled(bool) { }
-};
